Fixed double border between grouped buttons

--- a/css/strippit-widget.css
+++ b/css/strippit-widget.css
@@ -18,6 +18,9 @@
 	height: 40px;
 	border: black 1px solid;
 }
+#strippit-widget .btn-group > .btn:not(:first-child) {
+	border-left: none;
+}
 #strippit-widget span.glyphicon,
 #strippit-widget span.fa {
 	font-weight: normal;
@@ -306,14 +309,14 @@
 }
 .strippit-die-size {
 	position: fixed;
-	top: 230px;
-	left: 277px;
+	top: 228px;
+	left: 275px;
 	/*width: 400px;*/
 	/*height: 250px;*/
 	background-color: #fff;
 	opacity: 1;
 	z-index: 1002;
-	padding: 4px;
+	padding: 7px;
 	border-radius: 3px;
 }
 .strippit-die-size .die-size-label {
